--- a/source/index.html
+++ b/source/index.html
@@ -22,11 +22,8 @@
           <button class="main-nav__menu-button" type="button" aria-label="close"></button>
 
           <a class="main-nav__logo" href="#">
-            <svg class="main-nav__logo-desk" width="66" height="66">
+            <svg width="66" height="66">
               <use xlink:href="img/sprite.svg#logo" />
-            </svg>
-            <svg class="main-nav__logo-mobile" width="52" height="52">
-              <use xlink:href="img/sprite.svg#logo-mobile" />
             </svg>
           </a>
 
@@ -84,8 +81,21 @@
 
   </header>
   <main>
-    <a href="catalog.html">CATALOG</a>
-    <a href="product.html">PRODUCT</a>
+    <section class="promo">
+      <div class="promo__wrapper">
+        <div class="promo__main">
+          <h1>PERFECTION</h1>
+          <p>made to be yours</p>
+        </div>
+      </div>
+    </section>
+
+
+    <p>
+      <a href="catalog.html">CATALOG</a>
+      <a href="product.html">PRODUCT</a>
+    </p>
+
   </main>
   <footer>
 
