--- a/source/index.html
+++ b/source/index.html
@@ -290,6 +290,72 @@
         </div>
       </div>
     </section>
+    <section class="faq">
+      <div class="faq__wrapper">
+        <h2>Frequently asked questions</h2>
+
+        <div class="faq__items accordion" id="accordion">
+          <div class="accordion__item accordion__item-show accordion__no-js">
+            <div class="accordion__item-header">
+              <h3>What materials are the jewellery made of?</h3>
+            </div>
+            <div class="accordion__item-content">
+              <p>Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
+                semiprecious stones and crystals.</p>
+            </div>
+          </div>
+
+          <div class="accordion__item accordion__no-js">
+            <div class="accordion__item-header">
+              <h3>Which countries do you deliver to?</h3>
+            </div>
+            <div class="accordion__item-content">
+              <p>Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
+                semiprecious stones and crystals.</p>
+            </div>
+          </div>
+
+          <div class="accordion__item accordion__no-js">
+            <div class="accordion__item-header">
+              <h3>What are the payment methods?</h3>
+            </div>
+            <div class="accordion__item-content">
+              <p>Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
+                semiprecious stones and crystals.</p>
+            </div>
+          </div>
+
+          <div class="accordion__item accordion__no-js">
+            <div class="accordion__item-header">
+              <h3>Can I return the jewellery if it didn’t fit me?</h3>
+            </div>
+            <div class="accordion__item-content">
+              <p>Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
+                semiprecious stones and crystals.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="follow">
+      <div class="follow__wrapper">
+        <div class="follow__header">
+          <h2>@Chjewellery</h2>
+          <a href="#">Follow Us</a>
+        </div>
+        <div class="follow__content">
+          <div class="follow__content-one">1</div>
+          <div class="follow__content-two">2</div>
+          <div class="follow__content-three">3</div>
+          <div class="follow__content-four">4</div>
+          <div class="follow__content-five">5</div>
+          <div class="follow__content-six">6</div>
+          <div class="follow__content-seven">7</div>
+        </div>
+
+      </div>
+
+    </section>
 
   </main>
   <footer class="page-footer">
@@ -371,9 +437,7 @@
           </div>
         </div>
       </div>
-
     </section>
-
   </footer>
   <script src="js/vendor.js"></script>
   <script src="js/script.js"></script>
