--- a/source/product.html
+++ b/source/product.html
@@ -76,17 +76,370 @@
           <span>Cart 0</span>
         </a>
       </nav>
-
     </div>
-
   </header>
   <main>
-    <a href="catalog.html">CATALOG</a>
-    <a href="product.html">PRODUCT</a>
-  </main>
-  <footer>
+    <h1 class="visually-hidden">Product</h1>
+    <section class="product-card">
+      <div class="product-card__wrapper">
+        <div class="product-card__picture">
+          <div class="product-card__picture-one">
+            <picture>
+              <source type="image/webp"
+                srcset="img/product-gold-necklace-for-women@2x.webp 1x, img/product-gold-necklace-for-women@2x.webp 2x">
+              <img src="img/product-gold-necklace-for-women.jpg" srcset="img/product-gold-necklace-for-women@2x.jpg"
+                alt="gold necklace for women" width="100" height="125">
+            </picture>
+          </div>
 
+          <div class="product-card__picture-two">
+            <picture>
+              <source type="image/webp"
+                srcset="img/product-pretty-gold-necklace@2x.webp 1x, img/product-pretty-gold-necklace@2x.webp 2x">
+              <img src="img/product-pretty-gold-necklace.jpg" srcset="img/product-pretty-gold-necklace@2x.jpg"
+                alt="pretty gold necklace" width="100" height="125">
+            </picture>
+          </div>
+
+          <div class="product-card__picture-three">
+            <picture>
+              <source type="image/webp"
+                srcset="img/product-womens-necklace-set@2x.webp 1x, img/product-womens-necklace-set@2x.webp 2x">
+              <img src="img/product-womens-necklace-set.jpg" srcset="img/product-womens-necklace-set@2x.jpg"
+                alt="womens necklace set" width="100" height="125">
+            </picture>
+          </div>
+
+          <div class="product-card__picture-four">
+            <picture>
+              <source type="image/webp"
+                srcset="img/product-necklace-detail@2x.webp 1x, img/product-necklace-detail@2x.webp 2x">
+              <img src="img/product-necklace-detail.jpg" srcset="img/product-necklace-detail@2x.jpg"
+                alt="womens necklace set" width="470" height="435">
+            </picture>
+          </div>
+        </div>
+
+        <div class="product-card__description">
+          <div class="product-card__description-header">
+            <h2>Gold Necklace</h2>
+            <p>$ 115</p>
+          </div>
+          <div class="product-card__description-link">
+            <a href="#">Description</a>
+            <a href="#">Additional info</a>
+          </div>
+          <div class="product-card__description-about">
+            <table>
+              <tr>
+                <td>
+                  <p>Metal type</p>
+                </td>
+                <td><span>Gold 585</span></td>
+              </tr>
+              <tr>
+                <td>
+                  <p>Stone</p>
+                </td>
+                <td><span>Turquoise</span></td>
+              </tr>
+              <tr>
+                <td>
+                  <p>Size</p>
+                </td>
+                <td><span>18” / 20”</span></td>
+              </tr>
+            </table>
+          </div>
+          <button type="button">Add to cart</button>
+          <div class="product-card__description-conditions">
+            <p>14 Day Returns</p>
+            <p>2-Year Warranty</p>
+            <p>Free Shipping</p>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+    <section class="product-collection">
+      <div class="product-collection__wrapper">
+        <div class="slider-swiper swiper-container">
+          <div class="product-collection-header">
+            <h2>You May Also Like</h2>
+            <a href="catalog.html">Shop Now</a>
+          </div>
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/purple-gemstone-necklace-desktop.webp 1x, img/purple-gemstone-necklace-desktop@2x.webp 2x">
+                  <img src="img/purple-gemstone-necklace-desktop.jpg"
+                    srcset="img/purple-gemstone-necklace-desktop@2x.jpg" alt="Necklace with amethyst" width="270"
+                    height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Necklace with amethyst</p>
+                  <p class="product-collection__slider-specification-price">$ 145</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/layered-choker-necklace-desktop@2x.webp 1x, img/layered-choker-necklace-desktop@2x.webp 2x">
+                  <img src="img/layered-choker-necklace-desktop@2x.jpg"
+                    srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Layered сhoker</p>
+                  <p class="product-collection__slider-specification-price">$ 115</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/dainty-gold-necklace-desktop@2x.webp 1x, img/dainty-gold-necklace-desktop@2x.webp 2x">
+                  <img src="img/dainty-gold-necklace-desktop@2x.jpg" srcset="img/dainty-gold-necklace-desktop@2x.jpg"
+                    alt="Gold chain" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Gold chain</p>
+                  <p class="product-collection__slider-specification-price">$ 215</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/galaxy-earrings-desktop@2x.webp 1x, img/galaxy-earrings-desktop@2x.webp 2x">
+                  <img src="img/galaxy-earrings-desktop@2x.jpg" srcset="img/galaxy-earrings-desktop@2x.jpg"
+                    alt="Galaxy earrings" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Galaxy earrings</p>
+                  <p class="product-collection__slider-specification-price">$ 95</p>
+                </div>
+              </a>
+            </div>
+
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/purple-gemstone-necklace-desktop.webp 1x, img/purple-gemstone-necklace-desktop@2x.webp 2x">
+                  <img src="img/purple-gemstone-necklace-desktop.jpg"
+                    srcset="img/purple-gemstone-necklace-desktop@2x.jpg" alt="Necklace with amethyst" width="270"
+                    height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Necklace with amethyst</p>
+                  <p class="product-collection__slider-specification-price">$ 145</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/layered-choker-necklace-desktop@2x.webp 1x, img/layered-choker-necklace-desktop@2x.webp 2x">
+                  <img src="img/layered-choker-necklace-desktop@2x.jpg"
+                    srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Layered сhoker</p>
+                  <p class="product-collection__slider-specification-price">$ 115</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/dainty-gold-necklace-desktop@2x.webp 1x, img/dainty-gold-necklace-desktop@2x.webp 2x">
+                  <img src="img/dainty-gold-necklace-desktop@2x.jpg" srcset="img/dainty-gold-necklace-desktop@2x.jpg"
+                    alt="Gold chain" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Gold chain</p>
+                  <p class="product-collection__slider-specification-price">$ 215</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/galaxy-earrings-desktop@2x.webp 1x, img/galaxy-earrings-desktop@2x.webp 2x">
+                  <img src="img/galaxy-earrings-desktop@2x.jpg" srcset="img/galaxy-earrings-desktop@2x.jpg"
+                    alt="Galaxy earrings" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Galaxy earrings</p>
+                  <p class="product-collection__slider-specification-price">$ 95</p>
+                </div>
+              </a>
+            </div>
+
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/purple-gemstone-necklace-desktop.webp 1x, img/purple-gemstone-necklace-desktop@2x.webp 2x">
+                  <img src="img/purple-gemstone-necklace-desktop.jpg"
+                    srcset="img/purple-gemstone-necklace-desktop@2x.jpg" alt="Necklace with amethyst" width="270"
+                    height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Necklace with amethyst</p>
+                  <p class="product-collection__slider-specification-price">$ 145</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/layered-choker-necklace-desktop@2x.webp 1x, img/layered-choker-necklace-desktop@2x.webp 2x">
+                  <img src="img/layered-choker-necklace-desktop@2x.jpg"
+                    srcset="img/layered-choker-necklace-desktop@2x.jpg" alt="Layered сhoker" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Layered сhoker</p>
+                  <p class="product-collection__slider-specification-price">$ 115</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/dainty-gold-necklace-desktop@2x.webp 1x, img/dainty-gold-necklace-desktop@2x.webp 2x">
+                  <img src="img/dainty-gold-necklace-desktop@2x.jpg" srcset="img/dainty-gold-necklace-desktop@2x.jpg"
+                    alt="Gold chain" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Gold chain</p>
+                  <p class="product-collection__slider-specification-price">$ 215</p>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide product-collection__slider-item">
+              <a href="product.html">
+                <picture>
+                  <source type="image/webp"
+                    srcset="img/galaxy-earrings-desktop@2x.webp 1x, img/galaxy-earrings-desktop@2x.webp 2x">
+                  <img src="img/galaxy-earrings-desktop@2x.jpg" srcset="img/galaxy-earrings-desktop@2x.jpg"
+                    alt="Galaxy earrings" width="270" height="284">
+                </picture>
+                <div class="product-collection__slider-specification">
+                  <p class="product-collection__slider-specification-name">Galaxy earrings</p>
+                  <p class="product-collection__slider-specification-price">$ 95</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="product-collection__slider-pagination">
+            <!-- pagination -->
+            <div class="swiper-pagination product-collection__slider-pagination-item"></div>
+          </div>
+          <!-- navigation buttons -->
+          <div class="swiper-button-prev product-collection__slider-btn-left"></div>
+          <div class="swiper-button-next product-collection__slider-btn-right"></div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <section class="footer">
+      <div class="footer__wrapper">
+        <div class="footer__spam">
+          <div class="footer__spam-intro">
+            <h2>The good stuff in your inbox </h2>
+            <p>News and updates from CH. No spam, we promise.</p>
+          </div>
+          <div class="footer__spam-feedback">
+            <input id="footer__feedback" type="email" name="feedback-mail" placeholder="Your E-mail">
+            <label for="footer__feedback"></label>
+            <a href="#">Sign Up</a>
+          </div>
+        </div>
+        <div class="footer__items-wrapper">
+          <div class="footer__items">
+            <ul class="footer__items-left">
+              <li>
+                <a href="#">Ordering & Payment</a>
+              </li>
+              <li>
+                <a href="#">Terms & Conditions</a>
+              </li>
+              <li>
+                <a href="#">Returns & Exchanges</a>
+              </li>
+              <li>
+                <a href="#">Delivery</a>
+              </li>
+            </ul>
+            <ul class="footer__items-right">
+              <li>
+                <a href="#">About CH</a>
+              </li>
+              <li>
+                <a href="#">Stores & Hours</a>
+              </li>
+              <li>
+                <a href="#">Jobs</a>
+              </li>
+              <li>
+                <a href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__social">
+            <ul>
+              <li class="footer__social-fb">
+                <a href="#">
+                  <span>
+                    Facebook
+                  </span>
+                </a>
+              </li>
+              <li class="footer__social-inst">
+                <a href="#">
+                  <span>
+                    Instagram
+                  </span>
+                </a>
+              </li>
+              <li class="footer__social-print">
+                <a href="#">
+                  <span>
+                    Pinterest
+                  </span>
+                </a>
+              </li>
+              <li class="footer__social-twit">
+                <a href="#">
+                  <span>
+                    Twitter
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </footer>
+  <script src="js/vendor.js"></script>
   <script src="js/script.js"></script>
 </body>
 
