--- a/source/catalog.html
+++ b/source/catalog.html
@@ -68,7 +68,7 @@
               </li>
             </ul>
 
-            <a class="main-nav__login" href="#">Login</a>
+            <a class="main-nav__login" href="modal-login.html">Login</a>
           </div>
         </div>
         <a class="main-nav__cart" href="#">
@@ -149,7 +149,7 @@
               </ul>
             </fieldset>
             <fieldset class="catalog__filter-cost accordion__item accordion__item-show accordion__no-js">
-              <p class="accordion__item-header" class="filter-name">Price</p>
+              <p class="accordion__item-header">Price</p>
               <div class="catalog__filter-cost-range accordion__item-content">
                 <div class="catalog__filter-cost-range-controls">
                   <div class="catalog__filter-cost-range-controls-scale">
