--- a/source/cart.html
+++ b/source/cart.html
@@ -67,40 +67,24 @@
                 <a href="#">Contact Us</a>
               </li>
             </ul>
+
+            <a class="main-nav__login" href="modal-login.html">Login</a>
           </div>
         </div>
+        <a class="main-nav__cart" href="#">
+          <svg width="20" height="18">
+            <use xlink:href="img/sprite.svg#cart" />
+          </svg>
+          <span>Cart 0</span>
+        </a>
       </nav>
+
     </div>
 
   </header>
-  <main>
-    <h1 class="visually-hidden">Log In</h1>
-
-    <section class="modal-login modal-login--nojs">
-      <div class="modal-login__wrapper">
-        <div class="modal-login__box">
-          <h2>Log In</h2>
-          <form action="https://echo.htmlacademy.ru" method="POST">
-            <label for="modal-login-mail">
-              <input id="modal-login-mail" type="email" name="Email" placeholder="Your E-mail" title="Your E-mail"
-                required>
-            </label>
-            <label for="modal-login-pass">
-              <input id="modal-login-pass" type="password" name="Password" placeholder="Password" title="Password"
-                required>
-            </label>
-            <a href="#">Forgot your password?</a>
-            <button class="modal-login__button" type="submit">Log In</button>
-          </form>
-          <div class="modal-login__sign-up">
-            <p>Don’t have an account?</p>
-            <a href="#">Sign up</a>
-          </div>
-          <button class="modal-login__close" type="button" name="close"></button>
-        </div>
-      </div>
-    </section>
-  </main>
+<main>
+  <h1>КОРЗИНА</h1>
+</main>
   <footer class="page-footer">
     <section class="footer">
       <div class="footer__wrapper">
@@ -182,6 +166,32 @@
       </div>
     </section>
   </footer>
+
+  <section class="modal-login">
+    <div class="modal-login__wrapper">
+      <div class="modal-login__box">
+        <h2>Log In</h2>
+        <form action="https://echo.htmlacademy.ru" method="POST">
+          <label for="modal-login-mail">
+            <input id="modal-login-mail" type="email" name="Email" placeholder="Your E-mail" title="Your E-mail" required>
+          </label>
+          <label for="modal-login-pass">
+            <input id="modal-login-pass" type="password" name="Password" placeholder="Password" title="Password" required>
+          </label>
+          <a href="#">Forgot your password?</a>
+          <button class="modal-login__button" type="submit">Log In</button>
+        </form>
+        <div class="modal-login__sign-up">
+          <p>Don’t have an account?</p>
+          <a href="#">Sign up</a>
+        </div>
+        <button class="modal-login__close" type="button" name="close"></button>
+      </div>
+    </div>
+  </section>
+
+  <script src="js/vendor.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 
